<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.activity.login.LoginActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo_ui"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_login_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_account"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/gray_700"
        android:textColorHint="@color/gray_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/ed_log_username"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:textColor="@color/gray_700"
        android:textSize="12sp"
        android:autofillHints="username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_intro"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/ed_log_password"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/gray_700"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_log_username"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/iv_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_open_password"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="@+id/ed_log_password"
        app:layout_constraintTop_toTopOf="@+id/ed_log_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/gray_700"
        android:background="@drawable/bg_reg_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_log_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <TextView
            android:id="@+id/tv_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/gray_700"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_intent_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/gray_700"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>