<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_logo_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/logue_logo"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/gray_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/belajar_bahasa_lokal_dengan_mudah"
        android:textSize="14sp"
        android:textColor="@color/gray_200"
        android:lineSpacingExtra="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/yellow_200"
        android:background="@drawable/bg_log_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_regis"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/gray_700"
        android:background="@drawable/bg_reg_button"
        app:layout_constraintCircleRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>