<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_200"
    tools:context=".main.activity.tba.OnProgressActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_ui"
            android:layout_margin="10dp"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/coming_soon"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/coming_soon_desc"
            android:textSize="16sp"
            android:textColor="@color/gray_700"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_notify"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_notification"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/notify_me"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>