<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_200"
    tools:context=".main.activity.home.HomeActivity">

    <ImageView
        android:id="@+id/iv_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="-64dp"
        android:src="@drawable/fg_white_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_greet"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/greet"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/nama_akun"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textColor="@color/gray_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greet" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_account"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_greet"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username" />

</androidx.constraintlayout.widget.ConstraintLayout>